crates/index-scheduler/src/scheduler/snapshots/test_document_addition.rs/document_deletion_and_document_addition/documents.snap
---
source: crates/index-scheduler/src/scheduler/test_document_addition.rs
snapshot_kind: text
---
[
  {
    "id": 1,
    "doggo": "jean bob"
  },
  {
    "id": 2,
    "catto": "jorts"
  },
  {
    "id": 3,
    "doggo": "bork"
  }
]
